Removed refences to Transifex.

--- a/locale/de_DE/LC_MESSAGES/de.po
+++ b/locale/de_DE/LC_MESSAGES/de.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2009-06-10 14:42+0200\n"
 "PO-Revision-Date: 2009-06-10 14:42+0200\n"
 "Last-Translator: Georg K&auml;fer <gkaefer@backbone.co.at>\n"
-"Language-Team: poweradmin german\n"
+"Language-Team: German\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
