--- a/locale/nl_NL/LC_MESSAGES/nl_db.po
+++ b/locale/nl_NL/LC_MESSAGES/nl_db.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2011-07-08 23:45+0300\n"
 "PO-Revision-Date: 2012-02-14 09:00+0000\n"
 "Last-Translator: fdammeke <fabian@dammekens.be>\n"
-"Language-Team: Dutch (http://www.transifex.com/projects/p/poweradmin/language/nl/)\n"
+"Language-Team: Dutch\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
