--- a/locale/cs_CZ/LC_MESSAGES/cs.po
+++ b/locale/cs_CZ/LC_MESSAGES/cs.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2011-07-08 23:45+0300\n"
 "PO-Revision-Date: 2011-11-03 13:04+0000\n"
 "Last-Translator: quimi <quimi@quimi.cz>\n"
-"Language-Team: Czech (http://www.transifex.net/projects/p/poweradmin/team/cs/)\n"
+"Language-Team: Czech\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
