--- a/locale/en_EN/LC_MESSAGES/en.po
+++ b/locale/en_EN/LC_MESSAGES/en.po
@@ -8,8 +8,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/poweradmin/poweradmin/issues\n"
 "POT-Creation-Date: 2011-06-08 07:11+0300\n"
 "PO-Revision-Date: 2011-06-08 04:19+0000\n"
-"Last-Translator: edmondas <eg@fbsd.lt>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: Edmondas Girkantas <edmondas@girkantas.lt>\n"
+"Language-Team: English\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
