--- a/locale/fr_FR/LC_MESSAGES/fr.po
+++ b/locale/fr_FR/LC_MESSAGES/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2010-09-28 17:02+0200\n"
 "PO-Revision-Date: 2010-10-07 18:28+0200\n"
 "Last-Translator: Emmanuel Seyman <eseyman@edd.fr>\n"
-"Language-Team: poweradmin french\n"
+"Language-Team: French\n"
 "Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
