--- a/locale/fr_FR/LC_MESSAGES/fr_db.po
+++ b/locale/fr_FR/LC_MESSAGES/fr_db.po
@@ -7,7 +7,7 @@ msgstr ""
 "POT-Creation-Date: 2010-10-20 17:58+0200\n"
 "PO-Revision-Date: 2010-10-20 18:00+0200\n"
 "Last-Translator: Emmanuel Seyman <eseyman@edd.fr>\n"
-"Language-Team: poweradmin french\n"
+"Language-Team: French\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
