--- a/locale/ja_JP/LC_MESSAGES/ja.po
+++ b/locale/ja_JP/LC_MESSAGES/ja.po
@@ -3,9 +3,7 @@
 # This file is distributed under the same license as the Poweradmin package.
 # 
 # Translators:
-#   <eg@fbsd.lt>, 2011.
 # Koichi MATSUMOTO <mzch@me.com>, 2011.
-#       http://www.transifex.com/projects/p/poweradmin/language/ja/
 # Shogo Mori <smori@designet.co.jp>, 2017.
 #       http://www.designet.co.jp/ 
 msgid ""
@@ -15,7 +13,7 @@ msgstr ""
 "POT-Creation-Date: 2011-07-08 23:45+0300\n"
 "PO-Revision-Date: 2017-01-31 10:27+0900\n"
 "Last-Translator: Shogo Mori <smori@designet.co.jp>\n"
-"Language-Team: Japanese (http://www.designet.co.jp/)\n"
+"Language-Team: Japanese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
