--- a/locale/nb_NO/LC_MESSAGES/nb.po
+++ b/locale/nb_NO/LC_MESSAGES/nb.po
@@ -12,7 +12,7 @@ msgstr ""
 "POT-Creation-Date: 2011-07-08 23:45+0300\n"
 "PO-Revision-Date: 2012-11-09 04:05+0000\n"
 "Last-Translator: Per M Knutsen <pmknutsen@gmail.com>\n"
-"Language-Team: Norwegian Bokmål (http://www.transifex.com/projects/p/poweradmin/language/nb/)\n"
+"Language-Team: Norwegian Bokmål\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
