--- a/locale/pl_PL/LC_MESSAGES/pl.po
+++ b/locale/pl_PL/LC_MESSAGES/pl.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2010-05-15 21:38+0200\n"
 "PO-Revision-Date: 2010-05-15 23:21+0100\n"
 "Last-Translator: Krzysztof Laska <krzysztof.laska@steamworx.pl>\n"
-"Language-Team: poweradmin polish <krzysztof.laska@steamworx.pl>\n"
+"Language-Team: Polish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
