--- a/locale/ru_RU/LC_MESSAGES/ru_db.po
+++ b/locale/ru_RU/LC_MESSAGES/ru_db.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2011-07-08 23:45+0300\n"
 "PO-Revision-Date: 2011-11-03 14:14+0000\n"
 "Last-Translator: Belko <giharko@gmail.com>\n"
-"Language-Team: Russian (http://www.transifex.net/projects/p/poweradmin/team/ru/)\n"
+"Language-Team: Russian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
