--- a/locale/tr_TR/LC_MESSAGES/tr_db.po
+++ b/locale/tr_TR/LC_MESSAGES/tr_db.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2011-07-08 23:45+0300\n"
 "PO-Revision-Date: 2012-02-14 09:00+0000\n"
 "Last-Translator: Yura Cagran <community@avoxip.com>\n"
-"Language-Team: Turkish (http://www.transifex.com/projects/p/poweradmin/language/tr/)\n"
+"Language-Team: Turkish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
