--- a/locale/zh_CN/LC_MESSAGES/zh.po
+++ b/locale/zh_CN/LC_MESSAGES/zh.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2008-03-30 12:50+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: Chinese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
