--- a/locale/fr_FR/LC_MESSAGES/fr.po
+++ b/locale/fr_FR/LC_MESSAGES/fr.po
@@ -1,8 +1,8 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# Emmanuel Seyman <eseyman@edd.fr>, 2010.
+# Poweradmin translation.
+# Copyright (C) 2022 Poweradmin Development Team
+# This file is distributed under the same license as the Poweradmin package.
 #
+# Emmanuel Seyman <eseyman@edd.fr>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: poweradmin 2.1.5\n"
