--- a/locale/pl_PL/LC_MESSAGES/pl.po
+++ b/locale/pl_PL/LC_MESSAGES/pl.po
@@ -1,8 +1,8 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Poweradmin translation.
+# Copyright (C) 2022 Poweradmin Development Team
+# This file is distributed under the same license as the Poweradmin package.
 #
+# Krzysztof Laska <krzysztof.laska@steamworx.pl>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin\n"
