--- a/locale/en_EN/LC_MESSAGES/en.po
+++ b/locale/en_EN/LC_MESSAGES/en.po
@@ -928,11 +928,11 @@ msgstr ""
 msgid ""
 "Finally, if you see any errors during the installation process, a problem "
 "report would be appreciated. You can report problems (and ask for help) on "
-"the <a href=\"https://groups.google.com/group/poweradmin\" target=\"blank\">poweradmin</a> mailinglist."
+"the <a href=\"https://github.com/poweradmin/poweradmin/issues\" target=\"blank\">poweradmin</a> issues."
 msgstr ""
 "Finally, if you see any errors during the installation process, a problem "
 "report would be appreciated. You can report problems (and ask for help) on "
-"the <a href=\"https://groups.google.com/group/poweradmin\" target=\"blank\">poweradmin</a> mailinglist."
+"the <a href=\"https://github.com/poweradmin/poweradmin/issues\" target=\"blank\">poweradmin</a> issues."
 
 #: install/index.php:75
 msgid "Do you want to proceed now?"
