--- a/locale/nb_NO/LC_MESSAGES/nb.po
+++ b/locale/nb_NO/LC_MESSAGES/nb.po
@@ -923,8 +923,8 @@ msgstr "Alternativet til dette innstallerings programmet er å gjennomføre inns
 msgid ""
 "Finally, if you see any errors during the installation process, a problem "
 "report would be appreciated. You can report problems (and ask for help) on "
-"the <a href=\"https://groups.google.com/group/poweradmin\" target=\"blank\">poweradmin</a> mailinglist."
-msgstr "Til slutt, dersom du opplever problemer eller får feilmeldinger i løpet av innstalleringen setter utviklerene av Poweradmin pris på tilbakemelding. Du kan rapportere problemer (og be om hjelp) på <a href=\"https://groups.google.com/group/poweradmin\" target=\"blank\">poweradmin</a> mailing listen."
+"the <a href=\"https://github.com/poweradmin/poweradmin/issues\" target=\"blank\">poweradmin</a> issues."
+msgstr "Til slutt, dersom du opplever problemer eller får feilmeldinger i løpet av innstalleringen setter utviklerene av Poweradmin pris på tilbakemelding. Du kan rapportere problemer (og be om hjelp) på <a href=\"https://github.com/poweradmin/poweradmin/issues\" target=\"blank\">poweradmin</a> issues."
 
 #: install/index.php:75
 msgid "Do you want to proceed now?"
