--- a/locale/i18n-template-php.pot
+++ b/locale/i18n-template-php.pot
@@ -108,7 +108,7 @@ msgid "Delete user"
 msgstr ""
 
 #: users.php:131 edit_perm_templ.php:47
-msgid "Edit permission template"
+msgid "List permission templates"
 msgstr ""
 
 #: users.php:135 add_user.php:35
