--- a/locale/tr_TR/LC_MESSAGES/tr.po
+++ b/locale/tr_TR/LC_MESSAGES/tr.po
@@ -110,7 +110,7 @@ msgid "Delete user"
 msgstr "Kullanıcı sil"
 
 #: users.php:131 edit_perm_templ.php:47
-msgid "Edit permission template"
+msgid "List permission templates"
 msgstr "İzin şablonunu düzenle"
 
 #: users.php:135 add_user.php:35
