--- a/locale/nl_NL/LC_MESSAGES/nl.po
+++ b/locale/nl_NL/LC_MESSAGES/nl.po
@@ -829,7 +829,7 @@ msgstr "Het alternatief voor dit installatie script is een handmatige installati
 msgid ""
 "Finally, if you see any errors during the installation process, a problem "
 "report would be appreciated. You can report problems (and ask for help) on "
-"the <a href=\"https://groups.google.com/group/poweradmin\" target=\"blank\">poweradmin</a> issues."
+"the <a href=\"https://github.com/poweradmin/poweradmin/issues\" target=\"blank\">poweradmin</a> issues."
 msgstr "Tenslotte, mocht u onverhoopt problemen tijdens het installatie proces tegenkomen, zou een beschrijving daarvan welkom zijn. U kunt op de <a href=\"https://github.com/poweradmin/poweradmin/issues\" target=\"blank\">poweradmin</a> issues terecht voor hulp."
 
 #: install/index.php:75
