--- a/locale/cs_CZ/LC_MESSAGES/cs.po
+++ b/locale/cs_CZ/LC_MESSAGES/cs.po
@@ -975,28 +975,28 @@ msgid ""
 msgstr ""
 
 #: install/index.php:301
-msgid "The installer was able to write to the file \""
+msgid "The installer was able to write to the file"
 msgstr ""
 
 #: install/index.php:301
 msgid ""
-"\". A basic configuration, based on the details you have given, has been "
+"A basic configuration, based on the details you have given, has been "
 "created."
 msgstr ""
 
 #: install/index.php:303
-msgid "The installer is unable to write to the file \""
+msgid "The installer is unable to write to the file"
 msgstr ""
 
 #: install/index.php:303
 msgid ""
-"\" (which is in itself good). The configuration is printed here. You should "
-"now create the file \""
+"(which is in itself good). The configuration is printed here. You should "
+"now create the file"
 msgstr ""
 
 #: install/index.php:303
 msgid ""
-"\" in the Poweradmin root directory yourself. It should contain the "
+" in the Poweradmin root directory yourself. It should contain the "
 "following few lines:"
 msgstr ""
 
