--- a/locale/en_EN/LC_MESSAGES/en.po
+++ b/locale/en_EN/LC_MESSAGES/en.po
@@ -1011,35 +1011,35 @@ msgstr ""
 "After you have added the new user, proceed with this installation procedure."
 
 #: install/index.php:301
-msgid "The installer was able to write to the file \""
-msgstr "The installer was able to write to the file \""
+msgid "The installer was able to write to the file"
+msgstr "The installer was able to write to the file"
 
 #: install/index.php:301
 msgid ""
-"\". A basic configuration, based on the details you have given, has been "
+"A basic configuration, based on the details you have given, has been "
 "created."
 msgstr ""
-"\". A basic configuration, based on the details you have given, has been "
+"A basic configuration, based on the details you have given, has been "
 "created."
 
 #: install/index.php:303
-msgid "The installer is unable to write to the file \""
-msgstr "The installer is unable to write to the file \""
+msgid "The installer is unable to write to the file"
+msgstr "The installer is unable to write to the file"
 
 #: install/index.php:303
 msgid ""
-"\" (which is in itself good). The configuration is printed here. You should "
-"now create the file \""
+"(which is in itself good). The configuration is printed here. You should "
+"now create the file"
 msgstr ""
-"\" (which is in itself good). The configuration is printed here. You should "
-"now create the file \""
+"(which is in itself good). The configuration is printed here. You should "
+"now create the file"
 
 #: install/index.php:303
 msgid ""
-"\" in the Poweradmin root directory yourself. It should contain the "
+" in the Poweradmin root directory yourself. It should contain the "
 "following few lines:"
 msgstr ""
-"\" in the Poweradmin root directory yourself. It should contain the "
+" in the Poweradmin root directory yourself. It should contain the "
 "following few lines:"
 
 #: install/index.php:318
@@ -1055,10 +1055,10 @@ msgstr ""
 #: install/index.php:319
 msgid ""
 "After you have removed the directory, you can login to <a "
-"href=\"../index.php\">Poweradmin</a> with username \"admin\" and password \""
+"href=\"../index.php\">Poweradmin</a> with username \"admin\" and password"
 msgstr ""
 "After you have removed the directory, you can login to <a "
-"href=\"../index.php\">Poweradmin</a> with username \"admin\" and password \""
+"href=\"../index.php\">Poweradmin</a> with username \"admin\" and password"
 
 #: list_perm_templ.php:32
 msgid "Permission templates"
