--- a/locale/nb_NO/LC_MESSAGES/nb.po
+++ b/locale/nb_NO/LC_MESSAGES/nb.po
@@ -976,30 +976,30 @@ msgid ""
 msgstr "Fortsett med installeringen etter at du har opprettet en ny bruker."
 
 #: install/index.php:301
-msgid "The installer was able to write to the file \""
-msgstr "Innstallerings programmet kunne skrive til filen \""
+msgid "The installer was able to write to the file"
+msgstr "Innstallerings programmet kunne skrive til filen"
 
 #: install/index.php:301
 msgid ""
-"\". A basic configuration, based on the details you have given, has been "
+"A basic configuration, based on the details you have given, has been "
 "created."
-msgstr "\". En standard konfigurering, basert på informasjonen du har oppgitt, er nå lagret."
+msgstr "En standard konfigurering, basert på informasjonen du har oppgitt, er nå lagret."
 
 #: install/index.php:303
-msgid "The installer is unable to write to the file \""
-msgstr "Innstallerings programmet kunne ikke skrive til filen \""
-
-#: install/index.php:303
-msgid ""
-"\" (which is in itself good). The configuration is printed here. You should "
-"now create the file \""
-msgstr "\" (noe som er bra). Konfigureringen er skrevet ut her. Du må nå opprette filen \""
+msgid "The installer is unable to write to the file"
+msgstr "Innstallerings programmet kunne ikke skrive til filen"
 
 #: install/index.php:303
 msgid ""
-"\" in the Poweradmin root directory yourself. It should contain the "
+"(which is in itself good). The configuration is printed here. You should "
+"now create the file"
+msgstr "(noe som er bra). Konfigureringen er skrevet ut her. Du må nå opprette filen"
+
+#: install/index.php:303
+msgid ""
+" in the Poweradmin root directory yourself. It should contain the "
 "following few lines:"
-msgstr "\" selv i root katalogen til Poweradmin. Denne filen må inneholde følgende linjer:"
+msgstr " selv i root katalogen til Poweradmin. Denne filen må inneholde følgende linjer:"
 
 #: install/index.php:318
 msgid ""
@@ -1011,8 +1011,8 @@ msgstr "Konfigureringen er nå fullfør. Du må nå slette katalogen \"/install\
 #: install/index.php:319
 msgid ""
 "After you have removed the directory, you can login to <a "
-"href=\"../index.php\">Poweradmin</a> with username \"admin\" and password \""
-msgstr "Når du har slettet katalogen, kan du logge deg inn på <a href=\"../index.php\">Poweradmin</a> med brukernavn \"admin\" og passord \""
+"href=\"../index.php\">Poweradmin</a> with username \"admin\" and password"
+msgstr "Når du har slettet katalogen, kan du logge deg inn på <a href=\"../index.php\">Poweradmin</a> med brukernavn \"admin\" og passord"
 
 #: list_supermasters.php:51 delete_supermaster.php:45
 msgid "Delete supermaster"
