--- a/locale/tr_TR/LC_MESSAGES/tr.po
+++ b/locale/tr_TR/LC_MESSAGES/tr.po
@@ -976,30 +976,30 @@ msgid ""
 msgstr "Bu kurulum işlemine yeni bir kullanıcı ekledikten sonra devam ediniz."
 
 #: install/index.php:301
-msgid "The installer was able to write to the file \""
-msgstr "Kurulum, \" dosyasına yazım yapmaya muktedir."
+msgid "The installer was able to write to the file"
+msgstr "Kurulum, dosyasına yazım yapmaya muktedir."
 
 #: install/index.php:301
 msgid ""
-"\". A basic configuration, based on the details you have given, has been "
+"A basic configuration, based on the details you have given, has been "
 "created."
-msgstr "\". Verdiğiniz detaylar esasında basit bir yapılandırma oluşturuldu."
+msgstr "Verdiğiniz detaylar esasında basit bir yapılandırma oluşturuldu."
 
 #: install/index.php:303
-msgid "The installer is unable to write to the file \""
-msgstr "Kurulum, \" dosyasına yazım yapmaya muktedir."
-
-#: install/index.php:303
-msgid ""
-"\" (which is in itself good). The configuration is printed here. You should "
-"now create the file \""
-msgstr "\" (varolan haliyle güzel). Yapılandırma buraya yazıldı. Şimdi dosyayı yaratmalısınız."
+msgid "The installer is unable to write to the file"
+msgstr "Kurulum, dosyasına yazım yapmaya muktedir."
 
 #: install/index.php:303
 msgid ""
-"\" in the Poweradmin root directory yourself. It should contain the "
+"(which is in itself good). The configuration is printed here. You should "
+"now create the file"
+msgstr "(varolan haliyle güzel). Yapılandırma buraya yazıldı. Şimdi dosyayı yaratmalısınız."
+
+#: install/index.php:303
+msgid ""
+" in the Poweradmin root directory yourself. It should contain the "
 "following few lines:"
-msgstr "\" kendinizin Poweradmin kök dizininde. Aşağıdaki birkaç satırı içermeli:"
+msgstr " kendinizin Poweradmin kök dizininde. Aşağıdaki birkaç satırı içermeli:"
 
 #: install/index.php:318
 msgid ""
@@ -1011,8 +1011,8 @@ msgstr "Şu anda yapılandırmayı tamamladık, poweradmin kok dizininden \"inst
 #: install/index.php:319
 msgid ""
 "After you have removed the directory, you can login to <a "
-"href=\"../index.php\">Poweradmin</a> with username \"admin\" and password \""
-msgstr "Dizini sildikten sonra, <a href=\"../index.php\">Poweradmin</a>'e \"admin\" kullanıcı adı ve \" şifresi ile giriş yapabilirsiniz."
+"href=\"../index.php\">Poweradmin</a> with username \"admin\" and password"
+msgstr "Dizini sildikten sonra, <a href=\"../index.php\">Poweradmin</a>'e \"admin\" kullanıcı adı ve şifresi ile giriş yapabilirsiniz."
 
 #: list_supermasters.php:51 delete_supermaster.php:45
 msgid "Delete supermaster"
